--- a/Language/strings_en.xml
+++ b/Language/strings_en.xml
@@ -36,6 +36,12 @@
 	<string name="Webradio.Filter.City">City</string>
 	
 	<string name="Webradio.Dialog.ShowFilter.Header">Show Filter</string>
+  <string name="Webradio.Dialog.ShowFilter.ShowFilter">Show My Filter</string>
+  <string name="Webradio.Dialog.ShowFilter.Country">Country</string>
+  <string name="Webradio.Dialog.ShowFilter.City">City</string>
+  <string name="Webradio.Dialog.ShowFilter.Genre">Genre</string>
+  <string name="Webradio.Dialog.ShowFilter.Bitrate">Bitrate</string>
+  <string name="Webradio.Dialog.ShowFilter.Quickfilter">Temporary Quick Filter</string>
 	
 	<string name="Webradio.Dialog.ImportFilter.Header">Import Filter</string>
 	
