--- a/Todo.txt
+++ b/Todo.txt
@@ -3,10 +3,10 @@ Homesite
 		- restliche Infos(Playcount, Bewertung, ...) einfügen
 		- ScrollText für Description
 		- Layout für Logos
-		- DummyLogo für Streams ohne eigenes Logo
+		// - DummyLogo für Streams ohne eigenes Logo
 		- evtl. Logos offline in einheitliches Format speichern
-		- Suche nach wegen um die ca. 10.000 Streams bei All schneller anzuzeigen
-		- Player erstellen
+		// - Suche nach wegen um die ca. 10.000 Streams bei All schneller anzuzeigen
+		// - Player erstellen
 
 	- Menü
 		- Favoriten Hinzufügen/Entfernen 
@@ -38,7 +38,7 @@ Filter
 		 hier muß auch erkannt werden, ob ein Filter hinzugefügt wurde)
 
 FilterShowDialog
-	- Select muß noch umgesetzt werden
+	// - Select muß noch umgesetzt werden
 	- bei Quickfiltern evtl. mehrfachauswahl
 
 
