Renamed "Home" to "Webradio" to avoid duplicate labels in navigation bar

--- a/Language/strings_en.xml
+++ b/Language/strings_en.xml
@@ -3,7 +3,7 @@
 	<string name="Webradio.MenuEntry">Webradio</string> 
 	<string name="Webradio.StateDisplayLabel">Webradio</string>
 
-	<string name="Webradio.Home.ScreenTitle">Home</string>
+	<string name="Webradio.Home.ScreenTitle">Webradio</string>
 	<string name="Webradio.Home.Menu.View">View</string>
 	<string name="Webradio.Home.Menu.ShowFilter">Filter</string>
 	<string name="Webradio.Home.Menu.ShowFavorites">Favorites</string>
